# beatlume

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  celerybeat-schedule  the-memory-thief.txt
backend/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  alembic.ini  celerybeat-schedule  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  pyproject.toml  railway.api.toml  railway.worker.toml
backend/app/: config.py  deps.py  main.py
backend/app/ai/: errors.py  graph_metrics.py  llm.py
backend/app/api/: ai.py  analytics.py  auth.py  beats.py  characters.py  chat.py  collaboration.py  core.py  draft.py  export.py  graph.py  insights.py  manuscript.py  router.py  scenes.py  sse.py  stories.py  users.py
backend/app/export/: __init__.py  base.py  docx_export.py  epub_export.py  pdf.py  plaintext.py
backend/app/models/: __init__.py  base.py  beat.py  character.py  chat_message.py  chat_thread.py  collaboration.py  core.py  draft.py  graph.py  insight.py  (+5 more)
backend/migrations/: env.py  init_rls.sql
backend/scripts/: live_scaffold_once.py
backend/tests/: conftest.py  test_ai_api.py  test_ai_prompts.py  test_ai_tasks_resilience.py  test_analytics.py  test_analytics_api.py  test_auth.py  test_beats.py  test_chat_api.py  test_chat_rls.py  test_chat_service.py  test_chat_tools.py  test_collaboration.py  test_context.py  test_core.py  test_export.py  test_health.py  test_insights.py  test_jti_revocation.py  test_llm_errors.py  test_manuscript_assembly.py  test_models.py  test_scenes.py  test_sse.py  test_stories.py  test_story_scaffold.py
(+253 files in other folders)
